--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6{
   grid-template-columns: repeat(12,65px);
   grid-template-rows: auto auto;
   grid-column-gap: 20px;
-  position: absolute;
+  position: relative;
   justify-content: center;
 }
 .section1::after{
@@ -41,14 +41,14 @@ h1, h2, h3, h4, h5, h6{
 /* 로고 */
 .logo{
   font-size: 8rem;
-  color: #ffffff;
+  color: #fff;
   font-family:"HyundaiExtraBold";
   grid-column: 4/ span 6;
   grid-row: 1/2; 
 }
 /* 웨더 앱 소개 */
 .description{
-  color: #ffffff;
+  color: #fff;
   font-size: 3rem;
   line-height: 1.5;
   grid-column: 7/ span 6;
